# funathon-project1

./: .gitignore  1-preprocessing.qmd  2-GB_model.qmd  2-RF_model.qmd  README.md  _quarto.yaml  doc_projet.qmd  index.qmd  pyproject.toml
intermediate_solutions/: 1_main.py  2_preprocessing.py  2b_RF.py  3_GB.py  3_RF.py  4_metrics.py
intermediate_solutions/solution_step1_to_2/: main.py
solution/: api.py  log_mlflow.py  main.py  preprocess.py
solution/admin/: extract.sh  extract_all.sh  save_models.py
starting_point/: main.py
subject/: 1-intro_data.qmd  2-GB_model.qmd  2-RF_model.qmd  2-preprocessing.qmd  3-GB_model.qmd  3-RF_model.qmd  4-metrics.qmd  5-logging.qmd  6-deployment.qmd  intro_data.qmd  introduction.qmd
