[project]
name = "funathon-project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.4.0",
    "dash-leaflet>=1.1.3",
    "flightradarapi>=1.4.0",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "polars>=1.37.1",
]
